Bug 112863 - [QNX][ARM] REGRESSION(r135330): Various failures in Octane
Summary: [QNX][ARM] REGRESSION(r135330): Various failures in Octane
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other Other
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-20 17:49 PDT by Cosmin Truta
Modified: 2013-03-20 19:36 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.74 KB, patch)
2013-03-20 18:09 PDT, Cosmin Truta
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Cosmin Truta 2013-03-20 17:49:14 PDT
This was resolved in changeset 146396, but only for Linux. Could it be applicable to all ELF platforms?
For the time being, a QNX-specific patch will follow.
Comment 1 Cosmin Truta 2013-03-20 18:09:36 PDT
Created attachment 194157 [details]
Patch
Comment 2 Yong Li 2013-03-20 18:55:55 PDT
Comment on attachment 194157 [details]
Patch

LGTM
Comment 3 WebKit Review Bot 2013-03-20 19:36:08 PDT
Comment on attachment 194157 [details]
Patch

Clearing flags on attachment: 194157

Committed r146429: <http://trac.webkit.org/changeset/146429>
Comment 4 WebKit Review Bot 2013-03-20 19:36:11 PDT
All reviewed patches have been landed.  Closing bug.