[QNX][ARM] REGRESSION(r135330): Various failures in Octane https://bugs.webkit.org/show_bug.cgi?id=112863

Patch by Cosmin Truta <ctruta@blackberry.com> on 2013-03-20
Reviewed by Yong Li.

This was fixed in http://trac.webkit.org/changeset/146396 on Linux only.
Enable this fix on QNX.

* assembler/ARMv7Assembler.h:
(ARMv7Assembler):
(JSC::ARMv7Assembler::replaceWithJump):
(JSC::ARMv7Assembler::maxJumpReplacementSize):
* assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::revertJumpReplacementToBranchPtrWithPatch):

Canonical link: https://commits.webkit.org/131212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146429 268f45cc-cd09-0410-ab3c-d52691b4dbfc